--- a/frontend/src/components/styles/VoiceAssistant.css
+++ b/frontend/src/components/styles/VoiceAssistant.css
@@ -4,10 +4,11 @@
   padding: 20px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: transparent;
-  height: 100vh;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   gap: 15px;
+  align-items: center;
 }
 
 .assistant-container h2 {
@@ -20,8 +21,9 @@
   overflow-y: auto;
   display: flex;
   gap: 10px;
-  margin-bottom: 10px;
+  margin-bottom: -35px;
   justify-content: flex-end;
+  justify-content: space-around;
 }
 
 .user-bubble {
@@ -43,7 +45,6 @@
   top: -528px;
   display: flex;
   z-index: -100;
-  right: -20px;
 }
 
 .status-bar span img {
